removed unused resource-definition

--- a/lddi.common/lddi.exporter.x73/pom.xml
+++ b/lddi.common/lddi.exporter.x73/pom.xml
@@ -99,8 +99,7 @@
             <Embed-Dependency></Embed-Dependency>
             <Export-Package>cx.ath.matthew.unix*,
           cx.ath.matthew.utils*</Export-Package>
-            <Include-Resource>lib,
-          src/main/resources</Include-Resource>
+            <Include-Resource>lib</Include-Resource>
             <Import-Package>*</Import-Package>
             <Bundle-NativeCode>libunix-java-32.so;
           osname=Linux;
