--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -26,20 +26,12 @@
     <module>lddi.karaf.feature</module>
   </modules>
   <scm>
-    <connection>${svn.base}/${project.artifactId}</connection>
-    <developerConnection>${svn.base}/${project.artifactId}</developerConnection>
-    <url>${svn.base.url}${project.artifactId}</url>
+    <connection>scm:git:https://github.com/universAAL/lddi.git</connection>
+	<developerConnection>scm:git:git@github.com:universAAL/lddi.git</developerConnection>
   </scm>
-  <distributionManagement>
-    <site>
-      <id>depot.universaal.org</id>
-      <url>${uaal.site.url}lddi/lddi.pom</url>
-    </site>
-  </distributionManagement>
   <properties>
     <remoteOBR></remoteOBR>
     <nameMatchString>^universAAL LDDI .*</nameMatchString>
-    <gforge.project.name>lddi</gforge.project.name>
     <maven.compile.source>1.5</maven.compile.source>
     <maven.compile.target>1.5</maven.compile.target>
     <groupIdMatchString>^org\.universAAL\.lddi</groupIdMatchString>
