Added generic abstraction
This is part of a future update. Take into account that the name of the
folder may change in the future. Made on behalf of FhG.

--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -24,6 +24,7 @@
     <module>../lddi.zwave/lddi.pom.zwave</module>
     <module>composite</module>
     <module>lddi.karaf.feature</module>
+    <module>../lddi.uaal/lddi.pom.uaal</module>
   </modules>
   <scm>
     <connection>scm:git:https://github.com/universAAL/lddi.git</connection>
