--- a/lddi.common/lddi.pom.common/pom.xml
+++ b/lddi.common/lddi.pom.common/pom.xml
@@ -14,6 +14,7 @@
   <name>universAAL LDDI Common Suite</name>
   <description>LDDI Common components</description>
   <modules>
+    <module>../lddi.abstraction</module>
     <module>../lddi.exporter.activityhub</module>
     <module>../lddi.exporter.x73</module>
     <module>../lddi.lib.activityhub</module>
