--- a/lddi.config/lddi.knx.devicemanager.config/pom.xml
+++ b/lddi.config/lddi.knx.devicemanager.config/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom.config</artifactId>
-    <version>3.3.1-SNAPSHOT</version>
+    <version>3.4.0</version>
     <relativePath>../lddi.pom.config</relativePath>
   </parent>
   <artifactId>lddi.knx.devicemanager.config</artifactId>
-  <version>3.3.1-SNAPSHOT</version>
+  <version>3.4.0</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI KNX device manager (config)</name>
   <inceptionYear>2013</inceptionYear>
