--- a/lddi.zwave/lddi.pom.zwave/pom.xml
+++ b/lddi.zwave/lddi.pom.zwave/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>3.4.0</version>
+    <version>3.4.1-SNAPSHOT</version>
     <relativePath>../../lddi.pom</relativePath>
   </parent>
   <artifactId>lddi.pom.zwave</artifactId>
-  <version>3.4.0</version>
+  <version>3.4.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI ZWave Suite</name>
   <description>Integration of KNX components</description>
@@ -24,7 +24,7 @@
       <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.zwave.exporter</artifactId>
-        <version>3.4.0</version>
+        <version>3.4.1-SNAPSHOT</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
