--- a/lddi.pom/lddi.karaf.feature/pom.xml
+++ b/lddi.pom/lddi.karaf.feature/pom.xml
@@ -129,6 +129,10 @@
       <groupId>org.universAAL.lddi</groupId>
       <artifactId>lddi.zigbee.commissioning.adapter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.universAAL.lddi</groupId>
+      <artifactId>lddi.abstraction</artifactId>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
