--- a/lddi.hw.exporter.activityhub/pom.xml
+++ b/lddi.hw.exporter.activityhub/pom.xml
@@ -144,10 +144,12 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.activityhub</artifactId>
+	  <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.phWorld</artifactId>
+	  <version>1.2.0</version>
     </dependency>
   </dependencies>
 </project>
