--- a/lddi.smarthome/lddi.smarthome.exporter/pom.xml
+++ b/lddi.smarthome/lddi.smarthome.exporter/pom.xml
@@ -3,8 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.universAAL.lddi</groupId>
-		<artifactId>lddi.pom.knx</artifactId>
+		<artifactId>lddi.pom.smarthome</artifactId>
 		<version>3.4.1-SNAPSHOT</version>
+		<relativePath>../lddi.pom.smarthome</relativePath>
 	</parent>
 	<artifactId>lddi.smarthome.exporter</artifactId>
 	<version>3.4.1-SNAPSHOT</version>
