--- a/lddi.smarthome/lddi.smarthome.exporter/pom.xml
+++ b/lddi.smarthome/lddi.smarthome.exporter/pom.xml
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.eclipse.smarthome.core</groupId>
 			<artifactId>org.eclipse.smarthome.core</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.b1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -73,4 +73,14 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>eclipse</id>
+			<name>Eclipse Repository</name>
+			<url>https://repo.eclipse.org/content/groups/releases/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
