--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -55,6 +55,13 @@
         <scope>import</scope>
       </dependency>
       <dependency>
+        <groupId>org.universAAL.support</groupId>
+        <artifactId>utilities.pom</artifactId>
+        <version>3.4.1-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
         <groupId>org.universAAL.lddi</groupId>
         <artifactId>lddi.composite</artifactId>
         <version>3.4.1-SNAPSHOT</version>
