--- a/lddi.pom/lddi.karaf.feature/pom.xml
+++ b/lddi.pom/lddi.karaf.feature/pom.xml
@@ -12,6 +12,7 @@
   <artifactId>lddi.karaf.feature</artifactId>
   <version>3.4.1-SNAPSHOT</version>
   <name>universAAL LDDI Karaf Feature</name>
+  <packaging>pom</packaging>
   <properties>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
   </properties>
