--- a/lddi.smarthome/lddi.smarthome.exporter/pom.xml
+++ b/lddi.smarthome/lddi.smarthome.exporter/pom.xml
@@ -24,7 +24,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.container.xfaces.osgi</artifactId>
+			<artifactId>mw.container.osgi</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
