Rename mw.data.serialization - universAAL/middleware#12

--- a/lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/pom.xml
+++ b/lddi.bluetooth/lddi.bluetooth.continuahdpmanagerservice/pom.xml
@@ -78,7 +78,7 @@
       <dependencies>
         <dependency>
           <groupId>org.universAAL.middleware</groupId>
-          <artifactId>mw.data.serialization.osgi</artifactId>
+          <artifactId>mw.data.serialization.turtle.osgi</artifactId>
         </dependency>
       </dependencies>
     </profile>
