--- a/lddi.smarthome/lddi.pom.smarthome/lddi.smarthome.karaf.feature/pom.xml
+++ b/lddi.smarthome/lddi.pom.smarthome/lddi.smarthome.karaf.feature/pom.xml
@@ -29,7 +29,7 @@
     </dependency>
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
-      <artifactId>mw.data.serialization.osgi</artifactId>
+      <artifactId>mw.data.serialization.turtle.osgi</artifactId>
     </dependency>
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
