Added the implementation of replaceComponents() in CommunicationGateway

--- a/lddi.common/lddi.abstraction/pom.xml
+++ b/lddi.common/lddi.abstraction/pom.xml
@@ -30,6 +30,10 @@
       <groupId>org.universAAL.middleware</groupId>
       <artifactId>mw.interfaces.core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.universAAL.middleware</groupId>
+      <artifactId>mw.managers.api.core</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
