Updated config files
According to latest build of distro.karaf

--- a/lddi.smarthome/configfiles/userdata/etc/system.properties
+++ b/lddi.smarthome/configfiles/userdata/etc/system.properties
@@ -22,9 +22,6 @@
 # properties at the very beginning of the Karaf's boot process.
 #
 
-# Properties file inclusions (as a space separated list of relative paths)
-# Included files will override the values specified in this file
-${optionals} = custom.system.properties
 
 # Log level when the pax-logging service is not available
 # This level will only be used while the pax-logging service bundle
@@ -50,9 +47,7 @@ karaf.default.repository = system
 # session.  This script can be used to create aliases and define
 # additional commands.
 #
-# NB: ${karaf.etc} is implicitly added to the path, don't use absolute path here
-#
-karaf.shell.init.script = shell.init.script,scripts/*.script
+karaf.shell.init.script = ${karaf.etc}/shell.init.script
 
 #
 # Sets the maximum size of the shell command history. If not set,
@@ -71,12 +66,7 @@ karaf.clean.all = false
 karaf.clean.cache = false
 
 #
-# User name for the Karaf local console
-#
-karaf.local.user = karaf
-
-#
-# Roles to use when for the default user in the local Karaf console.
+# Roles to use when logging into a local Karaf console.
 #
 # The syntax is the following:
 #   [classname:]principal
@@ -85,7 +75,7 @@ karaf.local.user = karaf
 # and principal is the name of the principal of that class
 # (defaults to instance).
 #
-karaf.local.roles = admin,manager,viewer,systembundles
+karaf.local.roles = admin,manager,viewer
 
 #
 # Set this empty property to avoid errors when validating xml documents.
@@ -93,10 +83,20 @@ karaf.local.roles = admin,manager,viewer,systembundles
 xml.catalog.files =
 
 #
+# Suppress the bell in the console when hitting backspace too many times
+# for example
+#
+jline.nobell = true
+
+#
 # ServiceMix specs options
 #
 org.apache.servicemix.specs.debug = false
 org.apache.servicemix.specs.timeout = 0
+
+javax.xml.parsers.DocumentBuilderFactory=org.apache.xerces.jaxp.DocumentBuilderFactoryImpl
+javax.xml.transform.TransformerFactory=org.apache.xalan.processor.TransformerFactoryImpl
+
 
 #
 # Settings for the OSGi 4.3 Weaving
@@ -155,4 +155,3 @@ bundles.configuration.location=etc/
 ##uncomment to disable universAAL networking
 #net.slp.interfaces=127.0.0.1
 #jgroups.bind_addr=127.0.0.1
-
